--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
       <div class="location" id="home">
           <div class="hov"><h1 id="home">Popular on Netflix</h1></div>
           <div class="box">
-            <a href=""><img src="1.png" alt=""></a>
+            <a href=""><img src="p1.png" alt=""></a>
             <a href=""><img src="2.jpeg" alt=""></a>
-            <a href=""><img src="3.png" alt=""></a>
+            <a href=""><img src="p3.png" alt=""></a>
             <a href=""><img src="3.jpeg" alt=""></a>
-            <a href=""><img src="5.png" alt=""></a>
+            <a href=""><img src="p5.png" alt=""></a>
             <a href=""><img src="4.jpeg" alt=""></a>
     
-            <a href=""><img src="7.png" alt=""></a>
-            <a href=""><img src="8.png" alt=""></a>
-            <a href=""><img src="9.png" alt=""></a>
-            <a href=""><img src="10.png" alt=""></a>
-            <a href=""><img src="11.png" alt=""></a>
+            <a href=""><img src="p7.png" alt=""></a>
+            <a href=""><img src="p8.png" alt=""></a>
+            <a href=""><img src="p9.png" alt=""></a>
+            <a href=""><img src="p10.png" alt=""></a>
+            <a href=""><img src="p11.png" alt=""></a>
             <a href=""><img src="8.jpeg" alt=""></a>        
           </div>
       </div>
