--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" media="screen" href="styles.css">
-   <link rel="icon" href="fav.png"type="image/png">
+   <link rel="icon" href="fav.PNG"type="image/PNG">
   <script src="main.js"></script>
 </head>
 <body>
@@ -45,9 +45,9 @@
             <a href=""><img src="p5.PNG" alt=""></a>
             <a href=""><img src="4.jpeg" alt=""></a>
     
-            <a href=""><img src="p7.png" alt=""></a>
+            <a href=""><img src="p7.PNG" alt=""></a>
             <a href=""><img src="p8.PNG" alt=""></a>
-            <a href=""><img src="p9.png" alt=""></a>
+            <a href=""><img src="p9.PNG" alt=""></a>
             <a href=""><img src="p10.PNG" alt=""></a>
             <a href=""><img src="p11.PNG" alt=""></a>
             <a href=""><img src="8.jpeg" alt=""></a>        
@@ -90,14 +90,14 @@
         <a href=""><img src="15.jpeg" alt=""></a>
         <a href=""><img src="m4.PNG" alt=""></a>
         <a href=""><img src="6.jpeg" alt=""></a>
-        <a href=""><img src="m6.png" alt=""></a>                
+        <a href=""><img src="m6.PNG" alt=""></a>                
       </div>
 
      <div class="hov"> <h1 id="originals">Netflix Originals</h1></div>
       <div class="box">
         <a href=""><img src="o1.PNG" alt=""></a>
         <a href=""><img src="o2.PNG" alt=""></a>
-        <a href=""><img src="o3.png" alt=""></a>
+        <a href=""><img src="o3.PNG" alt=""></a>
         <a href=""><img src="16.jpeg" alt=""></a>
         <a href=""><img src="o5.PNG" alt=""></a>
         <a href=""><img src="17.jpeg" alt=""></a>                
