--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" media="screen" href="styles.css">
-   <link rel="icon" href="fav.png"type="image/PNG">
+   <link rel="icon" href="fav.png"type="image/png">
   <script src="main.js"></script>
 </head>
 <body>
